--- a/espumas/templates/espumas/medidas/detallemedidas.html
+++ b/espumas/templates/espumas/medidas/detallemedidas.html
@@ -5,7 +5,6 @@
     <div class="row">
         <div class="col-12 offset-1">
           
-
             <br>
             <h2>Detalles de: <font color="green">{{ itemsFront.descripcion }}</font> - TDE:<font color="red"> {{ itemsFront.tipo_de_espuma }}</font> - Unidad: <font color="orange">{{ itemsFront.tipo_de_unidad }} </font></h2>
             
@@ -112,7 +111,7 @@
             
             
                     <br>
-                    <a class="btn btn-primary" href="{% url 'espumas:espumas' %}" role="button"> Regresar </a>
+                    <a class="btn btn-primary" href="{% url 'espumas:medidas' %}" role="button"> Regresar </a>
             
                   <br>
               </div>
