--- a/espumas/templates/index.html
+++ b/espumas/templates/index.html
@@ -27,7 +27,7 @@
 								<div class="col-md-4">
 									<h2>Bloques/Medidas</h2>
 									<p>Esta es la sección donde se seleciona un los bloques para producir una orden de corrida.</p>
-									<p><a class="btn btn-primary" href="{% url 'espumas:espumas' %}" role="button"> Bloques/Medidas &raquo;</a></p>
+									<p><a class="btn btn-primary" href="{% url 'espumas:medidas' %}" role="button"> Bloques/Medidas &raquo;</a></p>
 								</div>
 								<div class="col-md-4">
 									<h2>Generar Corrida</h2>
