--- a/espumas/templates/baseprod.html
+++ b/espumas/templates/baseprod.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/fontawesome-all.min.css' %}">
 
-	<title>Espumas </title>
+	<title> Producción de Espumado </title>
 </head>
 <body>
 	
