Add fam_de_medidas to BloqueMedidas, rm dispobible

--- a/espumas/templates/espumas/medidas/detallemedidas.html
+++ b/espumas/templates/espumas/medidas/detallemedidas.html
@@ -90,7 +90,7 @@
                 <td>{{ itemsFront.alto_caliente_parametro_bajo }}</td>
         
                 <td>{{ itemsFront.uso_objetivo }}</td>
-                <td>{{ itemsFront.medida_dispobible }}</td>
+                <td>{{ itemsFront.disponible }}</td>
         
                 <td>{{ itemsFront.created }}</td>
                 <td>{{ itemsFront.updated }}</td>      
