remake detalles en medidas

--- a/espumas/templates/espumas/tde/detalletde.html
+++ b/espumas/templates/espumas/tde/detalletde.html
@@ -276,7 +276,7 @@
 <br>
 <br>
     <a class="btn btn-primary" href="{% url 'espumas:tde' %}" role="button"> Regresar </a>
-    <td class="text-center align-middle"><a class="btn btn-warning" href="{% url 'espumas:editar_tde' itemsFront.id %}" role="button"> editar  </a> </td>
+    <td class="text-center align-middle"><a class="btn btn-warning" href="{% url 'espumas:editar_tde' itemsFront.id %}" role="button"> Editar  </a> </td>
 <br>
 <br>
 <br>
