--- a/espumas/templates/index.html
+++ b/espumas/templates/index.html
@@ -71,8 +71,8 @@
 													<p><a class="btn btn-primary" href="{% url 'corrida:dashboard' %}" role="button">Capturar Bloques &raquo;</a></p>
 												</div>
 												<div class="col-md-4">
-													<h2> sss </h2>
-													<p> Para capturar los bloques de espuma aglutinada entra aquí.</p>
+													<h2> Bloques disponibles </h2>
+													<p> Buscador de bloques.</p>
 													<p><a class="btn btn-primary" href="#" role="button"> Capturar Aglutinado &raquo;</a></p>
 												</div>
 											</div>
