--- a/espumas/templates/espumas/medidas/medidas.html
+++ b/espumas/templates/espumas/medidas/medidas.html
@@ -5,12 +5,12 @@
     <a class="btn btn-info dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       Tipos De Espuma
     </a>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+        {% for menuItem in menufront %}
+        <a class="dropdown-item"  href="{% url 'espumas:medidas_filtrado' menuItem.id %}"> {{menuItem}}</a>
+        {% endfor %}  
+    </div>
     <a class="btn btn-success" href="{% url 'espumas:agregar_medidas' %}" role="button"> Agregar Medidas </a>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            {% for menuItem in menufront %}
-                <a class="dropdown-item"  href="{% url 'espumas:espumas_filtrado' menuItem.id %}"> {{menuItem}}</a>
-            {% endfor %}  
-        </div>
 </div>
 <br>
 <table class="table table-hover" >
