add template formas.html , ulr and view fnc, updated index

--- a/espumas/templates/index.html
+++ b/espumas/templates/index.html
@@ -32,7 +32,7 @@
 								<div class="col-md-4">
 									<h2>Generar Corrida</h2>
 									<p>Esta es la sección donde se puede ver el catalogo de espumas y bloques para generar una corrida.</p>
-									<p><a class="btn btn-primary" href="{% url 'espumas:espumas' %}" role="button"> Generar Corrida &raquo;</a></p>
+									<p><a class="btn btn-primary" href="{% url 'espumas:formas' %}" role="button"> Generar Corrida &raquo;</a></p>
 								</div>
 							</div>
 							
