--- a/corrida/templates/ordenes/produccion.html
+++ b/corrida/templates/ordenes/produccion.html
@@ -97,7 +97,7 @@
                 <!--Columna de contador  -->
                 <div class="col-6 offset-0 ">
                     <b>Bloques Producidos: </b>
-                    <span style="font-size:25px" class=" text-large badge badge-warning badge-pill">{{bloquesProducidosCount}}/{{elementoCorrida.cantidad}}</span>
+                    <span style="font-size:25px" class=" text-large badge badge-warning badge-pill">{{bloquesProducidosCount}}</span>
                 </div> 
             </div>
             <br>
