--- a/espumas/templates/index.html
+++ b/espumas/templates/index.html
@@ -73,7 +73,7 @@
 												<div class="col-md-4">
 													<h2> Bloques disponibles </h2>
 													<p> Buscador de bloques.</p>
-													<p><a class="btn btn-primary" href="#" role="button"> Capturar Aglutinado &raquo;</a></p>
+													<p><a class="btn btn-primary" href="{% url 'corrida:bloques_disponibles' %}" role="button"> Capturar Aglutinado &raquo;</a></p>
 												</div>
 											</div>
 
