--- a/corrida/templates/ordenes/ordenes_pendientes.html
+++ b/corrida/templates/ordenes/ordenes_pendientes.html
@@ -56,8 +56,21 @@
     <hr class="style7">-->
     <br>
     <h1 class="text-right text-secondary"> <b> Ordenes Pendientes </b></h1>
-    <br>
-
+    <br>  
+    {% if not corridas_pendientes%}
+    <!-- Si no hay corridas pendientes -->
+    <div>
+        <div class="text-center">
+            <br>
+            <br>
+            <h2 class="text-center my_title">
+                No hay ordenes Pendientes actualmente.
+            </h2>
+            <br>
+            <br>
+        </div>
+    </div>
+    {% else %}
     <!-- <h3 class="text-left my_title text-info" > <b> Corridas Pendientes </b></h3> -->
     {% for corrida in corridas_pendientes %}
     <table class="table table-hover table-sm" >
@@ -111,6 +124,7 @@
     <hr class="style4">
     <br>
     {% endfor %}
+    {% endif %}
 
 
    
