fix label in produccion add, prefetch to dashboard

--- a/corrida/templates/ordenes/produccion.html
+++ b/corrida/templates/ordenes/produccion.html
@@ -245,8 +245,7 @@
             <!-- Row de Heading del visor -->
             <div class="row">
                 <div class="col-12 offset-0">
-                    <p><b>Bloques Producidos de: <font color="green"> {{elementoCorrida.bloqueMedidas.tipo_de_espuma}}</font>
-                    Numero de Lote: <font color="blue">{{elementoCorrida.lote.no_de_lote}}</font> </p></b>
+                    <p><b>Bloques Producidos en esta corrida: </p></b>
                 </div>
             </div>
 
