--- a/corrida/templates/ordenes/dashboard_en_producion.html
+++ b/corrida/templates/ordenes/dashboard_en_producion.html
@@ -37,9 +37,9 @@
                 <tbody>
                     {% for elementoCorrida in corrida.elementocorrida_set.all %}
                     <tr>
-                        <td class="text-center" >{{ elementoCorrida.bloqueMedidas.tipo_de_espuma }}</td>
+                        <td class="text-center" >{{ elementoCorrida.bloqueMedidas.tipo_de_espuma.tipo_de_espuma }}</td>
                         <td class="text-center" >{{ elementoCorrida.bloqueMedidas.descripcion }}</td>
-                        <td class="text-center" >{{ elementoCorrida.bloqueMedidas.tipo_de_unidad }}</td>
+                        <td class="text-center" >{{ elementoCorrida.bloqueMedidas.tipo_de_unidad.tipo_de_unidad }}</td>
                         <td class="text-center" >{{ elementoCorrida.bloques_producidos }}/{{ elementoCorrida.cantidad }}</td>
                     </tr>
                     {% endfor %}
