added bold on field template corrida prdicuda

--- a/corrida/templates/ordenes/corrida_producida.html
+++ b/corrida/templates/ordenes/corrida_producida.html
@@ -20,7 +20,7 @@
         </thead>
         <tbody>
           <tr>
-            <td class="text-center">{{resumen.bloques_totales}}</td>
+            <td class="text-center"><b> {{resumen.bloques_totales}} </b></td>
             <td class="text-center">{{resumen.bloques_normales}}</td>
             <td class="text-center">{{resumen.bloques_ok}}</td>
             <td class="text-center">{{resumen.bloques_ng}}</td>
